[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimples"
description = "Distribute and manage your packages with dimples!"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0.dev0"

keywords = [
  "package",
  "manager",
  "package-manager",
  "module",
]

authors = [
  { name = "Joey Carpinelli", email = "joey@loopy.codes" },
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed",
]

dependencies = [
  "rich", 
  "typer", 
  "pypi_json",
  "pypi_simple", 
  "tomli; python_version<'3.11'",
  "tomli_w",
  "module-hygiene>=0.3.3",
  "block-scopes>=0.2.2",
]

[project.license]
file = "LICENSE"

[project.urls]
Documentation = "https://github.com/cadojo/dimples#readme"
Issues = "https://github.com/cadojo/dimples/issues"
Source = "https://github.com/cadojo/dimples"

[project.scripts]
dmp = "dimples.__main__:cli"

[tool.hatch.build]
packages = ["src/dimples"]
include = ["py.typed"]

[tool.hatch.envs.default]
dependencies = [
  "mypy",
  "black",
  "pytest",
  "pytest-cov",
  "types-requests",
]

[tool.hatch.envs.default.scripts]
coverage = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/dimples --cov=tests {args}"
tests = "coverage --no-cov {args}"
typing = "mypy . {args}"
format = "black ."

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.dimples.project]
type = "package"
strict = false

[tool.dimples.project.registries]
rich = "https://pypi.org/simple/"

